fixed whitespace issues on index, misc
still do not know why BS rows are overflowing, had to rip them out, overflow-x bandaid fix for services

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,7 +101,7 @@ html,
 body {
     width: 100%;
     margin: 0;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
 }
 
 footer {
@@ -209,7 +209,10 @@ footer {
     height: 300px
 }
 
-
+/* Index */
+#tab-group_container {
+    background-color: var(--colorBlue-100);
+}
 
 /* Index Rows */
 #row-1,
@@ -479,7 +482,6 @@ footer {
     position: relative;
     width: 100%;
     height: 108px;
-    
     transform: scale(1, -1);
     top: -10px;
     left: 0px;
@@ -493,7 +495,7 @@ footer {
     transform: scale(1, -1);
     top: 0px;
     left: 0px;
-    fill: rgb(255, 255, 255)
+    fill: rgb(255, 255, 255) !important;
 }
 
 .elms-mode {
